BRAV 1183 Singles Project - added min-height to dialogue box to prevent "ok" button from being cut off. Suspect the javascript handling the modal is culprit however.

--- a/brav/1183/modules/vhm/widgets/css/colorschemes/brav_1183_singles_mpoll.css
+++ b/brav/1183/modules/vhm/widgets/css/colorschemes/brav_1183_singles_mpoll.css
@@ -197,6 +197,7 @@ div.jqmWindow.dialog {
 	left: 0 !important;
 	margin-left: 0 !important;
 	box-sizing: border-box;
+	min-height: 138px;
 }
 div.dialogContent {
 	position: relative;
@@ -295,6 +296,9 @@ and (min-width: 580px) {
 and (min-width: 700px) {
 	div.qList div.row {
 		margin: 0 40px 40px;
+	}
+	div.jqmWindow.dialog {
+		min-height: 184px;
 	}
 	div.dialogContent > .caption {
 	background: url('../../img/brav/1183/vote-overlay-720x150_header.jpg') center center no-repeat transparent;
