--- a/brav/1183/modules/vhm/widgets/css/colorschemes/brav_1183_singles_mpoll_rail.css
+++ b/brav/1183/modules/vhm/widgets/css/colorschemes/brav_1183_singles_mpoll_rail.css
@@ -121,6 +121,7 @@ div.jqmWindow.dialog {
 	left: 0 !important;
 	margin-left: 0 !important;
 	box-sizing: border-box;
+	min-height: 138px;
 }
 div.dialogContent > .caption {
 	background: url('../../img/brav/1183/vote-overlay-300x150_header.jpg') center center no-repeat transparent;
@@ -324,6 +325,9 @@ and (min-width: 768px) and (max-width: 991px) {
 		line-height: 40px;
 		color: #36bdb2;
 		background-size: 100% auto;
+	}
+	div.jqmWindow.dialog {
+		min-height: 184px;
 	}
 		div.dialogContent > .caption {
 	background: url('../../img/brav/1183/vote-overlay-720x150_header.jpg') center center no-repeat transparent;
